# slackware-pkg

./: .dockerignore  .gitignore  Dockerfile  FILE_LIST  README.md  config.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-packages.yml
scripts/: check_existing_package.sh  commit_and_push_build.sh  copy_packages_to_slackware.sh  git_commit_and_push.sh  prepare_build_matrix.sh  run_buildlist.sh  update_readme_packages.sh
slackware64-current/: CHECKSUMS.md5  FILE_LIST
slackware64-current/dust/: dust-1.2.3-x86_64-1.tgz
slackware64-current/fd/: fd-10.3.0-x86_64-1.tgz
slackware64-current/lsd/: lsd-1.2.0-x86_64-1.tgz
slackware64-current/resvg/: resvg-0.45.1-x86_64-1.tgz
slackware64-current/zoxide/: zoxide-0.9.8-x86_64-1.tgz
src/slackware_pkg/: __init__.py  builder.py  builders.py  config.py  git.py  main.py  models.py  packager.py  release.py
