[project]
name = "slackware-pkg"
version = "0.1.0"
description = "A Python tool to build packages from source into Slackware package format"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[project.scripts]
slackware-pkg = "slackware_pkg.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
